# World-Cup-Poll

./: Cargo.toml  README.md  flake.nix
src/: commands.rs  helpers.rs  interactions.rs  main.rs  types.rs
