[package]
name = "wcp"
version = "0.1.0"
edition = "2024"

[dependencies]
poise = "0.6"
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
chrono = { version = "0.4", features = ["serde"] }